--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,26 @@
-/* *********************************** */
-/* *** Estilos SOLO para index.html *** */
-/* *********************************** */
+.container{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 10% 1fr 10%;
+    grid-template-rows: 100px 1fr;
+}
+
+header{
+    background-color: aqua;
+    grid-column: 2/3;
+    grid-row: 1/1;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  
+}
+
+
+    
+
+
+main{
+grid-column: 1/3;
+grid-row: 2/3;
+background-color: blueviolet;
+}
 
