--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,8 @@
 /* Colores */
 
 /* ******************************** */
+.activo::first-letter{
+    text-decoration: underline;
+}
 
+a{text-decoration: none;}
